--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,7 @@
         <style>
           * {
             color: Green;
+            text-align: center;
           }
   </style>
   <title>Class</title>
